# Feigenbaum-Chaos-Explorer

./: .gitignore  README.md  pyproject.toml  requirements.txt  run.py
src/feigenbaum_explorer/: __init__.py  app.py  maps.py  numerics.py
tests/: test_numerics.py
