[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "feigenbaum-chaos-explorer"
version = "1.0.0"
description = "Interactive Tkinter laboratory for period doubling, Feigenbaum constants and universality."
readme = "README.md"
requires-python = ">=3.10"
dependencies = ["numpy>=1.24", "matplotlib>=3.7", "Pillow>=10.0"]

[project.scripts]
feigenbaum-explorer = "feigenbaum_explorer.app:main"

[tool.setuptools.packages.find]
where = ["src"]
